--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True"
+    "DefaultConnection": "Data Source=app.db"
   },
   "Logging": {
     "LogLevel": {
